RESOLVED FIXED218080
REGRESSION(r268615): certain animations break when moving from one to display to another or resizing the window
https://bugs.webkit.org/show_bug.cgi?id=218080
Summary REGRESSION(r268615): certain animations break when moving from one to display...
Antoine Quint
Reported 2020-10-22 08:33:04 PDT
REGRESSION(r268615): certain animations break when moving from one to display to another or resizing the window
Attachments
Patch (2.07 KB, patch)
2020-10-22 08:39 PDT, Antoine Quint
no flags
Patch (26.50 KB, patch)
2020-10-23 08:29 PDT, Antoine Quint
dino: review+
Antoine Quint
Comment 1 2020-10-22 08:39:24 PDT
Antoine Quint
Comment 2 2020-10-22 08:39:29 PDT
Simon Fraser (smfr)
Comment 3 2020-10-22 09:10:07 PDT
Comment on attachment 412100 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=412100&action=review > Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:-669 > - noteLayerPropertyChanged(AnimationChanged | CoverageRectChanged); Does bug 218081 cover the CoverageRectChanged case? That's about getting the tiling area right for layers which are children of an animating layer.
Antoine Quint
Comment 4 2020-10-22 10:37:35 PDT
(In reply to Simon Fraser (smfr) from comment #3) > Comment on attachment 412100 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=412100&action=review > > > Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:-669 > > - noteLayerPropertyChanged(AnimationChanged | CoverageRectChanged); > > Does bug 218081 cover the CoverageRectChanged case? That's about getting the > tiling area right for layers which are children of an animating layer. We should probably file a different bug for this. I'd appreciate some leads related to testing.
Antoine Quint
Comment 5 2020-10-23 08:29:41 PDT
Dean Jackson
Comment 6 2020-10-23 11:30:06 PDT
Comment on attachment 412183 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=412183&action=review > Source/WebCore/style/StyleTreeResolver.cpp:352 > + auto previousLastStyleChangeEventStyle = styleable.lastStyleChangeEventStyle() ? RenderStyle::clonePtr(*styleable.lastStyleChangeEventStyle()) : RenderStyle::createPtr(); Do you need to clone/copy? Does applyKeyframeEffects mutate the style?
Antoine Quint
Comment 7 2020-10-23 11:35:54 PDT
Antoine Quint
Comment 8 2020-10-23 11:42:27 PDT
(In reply to Dean Jackson from comment #6) > Comment on attachment 412183 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=412183&action=review > > > Source/WebCore/style/StyleTreeResolver.cpp:352 > > + auto previousLastStyleChangeEventStyle = styleable.lastStyleChangeEventStyle() ? RenderStyle::clonePtr(*styleable.lastStyleChangeEventStyle()) : RenderStyle::createPtr(); > > Do you need to clone/copy? Does applyKeyframeEffects mutate the style? This is because we immediately call styleable.setLastStyleChangeEventStyle() which would make the previous value no longer owned by anything.
Note You need to log in before you can comment on or make changes to this bug.