Source/WebCore/dom/Element.h
@@ -489,7 +489,6 @@ public:
     KeyframeEffectStack* keyframeEffectStack(PseudoId) const;
     KeyframeEffectStack& ensureKeyframeEffectStack(PseudoId);
     bool hasKeyframeEffects(PseudoId) const;
-    OptionSet<AnimationImpact> applyKeyframeEffects(PseudoId, RenderStyle&);
 
     const AnimationCollection* animations(PseudoId) const;
     bool hasCompletedTransitionForProperty(PseudoId, CSSPropertyID) const;
